# ck-pg-client

./: COPYING  Cargo.toml  README.md  shell.nix
ck-pg-client/: Cargo.toml
ck-pg-client/src/: connectivity.rs  error.rs  lib.rs  pgdoc.rs  usize_conversions.rs
ck-pg-client/src/capabilities/: md5_md5.rs  md5_unavailable.rs  mod.rs  ssl_rustls.rs  ssl_unavailable.rs
ck-pg-client/src/connectivity/: conventions.rs  initiate_ssl.rs  mod.rs  ssl.rs  start_up.rs
ck-pg-client/src/protocol/: backend_message.rs  frontend_message.rs  mod.rs  read_backend_message.rs  receiver.rs  ssl_session_encryption.rs  startup.rs
ck-pg-client/src/tests/: mod.rs  rustls_util.rs  with_cluster.rs
ck-pg-client/testdata/: server.crt  server.key
tools/: build
tools/nixpkgs/: default.nix  pinned.nix
tools/nixpkgs-mozilla/: overlay.nix  pinned.nix
tools/rust/: overlay.nix  pinned.nix
